@@ -1,9 +1,11 @@
 
 Drupal 7.18, xxxx-xx-xx (development version)
 -----------------------
+- Fixed a bug which caused the database API to not properly close database
+  connections.
 - Added link to the URL for running cron from outside the site to the Cron
   settings page (UI change).
-- Fixed bug which prevented image styles from being reverted on PHP 5.4.
+- Fixed a bug which prevented image styles from being reverted on PHP 5.4.
 - Made the default .htaccess rules protocol sensitive to improve security for
   sites which use HTTPS and redirect between "www" and non-"www" versions of
   the page.
